--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -141,6 +141,12 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Arena.h" />
+    <ClInclude Include="Characters.h" />
+    <ClInclude Include="Point2D.h" />
+    <ClInclude Include="tmp.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
